--- a/src/app/bmx/components/bmx-creator/bmx-creator.component.html
+++ b/src/app/bmx/components/bmx-creator/bmx-creator.component.html
@@ -1,8 +1,8 @@
 
   <!--  SURVEY CREATION & DESIGN 🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿-->
-  <div [ngClass]="bmxClientPageDesignMode?'page-design':'page-design-client'" >
+  <!-- <div [ngClass]="bmxClientPageDesignMode?'page-design':'page-design-client'" >
     <app-survey-creation-design [isBrandMatrixSurvey]="isBrandMatrixSurvey" [isMenuActive11]="isMenuActive11"
       [bmxClientPageDesignMode]="bmxClientPageDesignMode" [bmxClientPageOverview]="bmxClientPageOverview"
       [widthLogo]="widthTemporary">
-    </app-survey-creation-design>
+    </app-survey-creation-design> -->
 
