--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/text-paragraph/text-paragraph.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/text-paragraph/text-paragraph.component.html
@@ -15,12 +15,12 @@
         [innerHTML]="bmxItem.componentText | safe: 'html'"></div>
 </ng-template>
 
-<div cdkDrag>
+<!-- <div cdkDrag>
     <ckeditor *ngIf="openSettings && bmxClientPageOverview" id="txtTexto" class="ckeditorcev"
         style="animation: fadeIn 0.5s ease forwards;" [ngModelOptions]="{standalone: true}"
         [(ngModel)]="bmxItem.componentText" [data]="bmxItem.componentText" [config]="ckconfig">
     </ckeditor>
-</div>
+</div> -->
 
 
 <!-- <div style="display: flex;justify-content: space-around; align-items: center;width: 90vw;">
