--- a/src/app/bmx/components/bmx-creator/survey-matrix/survey-matrix.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-matrix/survey-matrix.component.html
@@ -108,8 +108,8 @@
                     <!-- RANK SCALE 😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭-->
                     <div *ngIf="bmxItem.componentType === 'ranking-scale'" class="paragraph">
 
-                        <app-rank-scale [bmxItem]="bmxItem" [i]="i" [bmxClientPageDesignMode]="bmxClientPageDesignMode"
-                            [bmxClientPageOverview]="bmxClientPageOverview" (autoSave)="autoSave()"></app-rank-scale>
+                        <!-- <app-rank-scale [bmxItem]="bmxItem" [i]="i" [bmxClientPageDesignMode]="bmxClientPageDesignMode"
+                            [bmxClientPageOverview]="bmxClientPageOverview" (autoSave)="autoSave()"></app-rank-scale> -->
                     </div>
                     <!-- END RANK SCALE 😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭 -->
 
@@ -144,17 +144,17 @@
                         </div>
                         <!-- modal end -->
 
-                        <app-image-rank-drag [bmxItem]="bmxItem" [i]="i"
+                        <!-- <app-image-rank-drag [bmxItem]="bmxItem" [i]="i"
                             [bmxClientPageDesignMode]="bmxClientPageDesignMode"
                             [bmxClientPageOverview]="bmxClientPageOverview" (launchPathModal)="setPath($event)"
-                            (autoSave)="autoSave()"></app-image-rank-drag>
+                            (autoSave)="autoSave()"></app-image-rank-drag> -->
                     </div>
                     <!-- END RANK DRAG 👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽 -->
 
                     <!-- NARROW DOWN SCALE 😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭-->
                     <div *ngIf="bmxItem.componentType === 'narrow-down'" class="paragraph">
-                        <app-narrow-down [bmxItem]="bmxItem" [i]="i" [bmxClientPageDesignMode]="bmxClientPageDesignMode"
-                            (autoSave)="autoSave()" [bmxClientPageOverview]="bmxClientPageOverview"></app-narrow-down>
+                        <!-- <app-narrow-down [bmxItem]="bmxItem" [i]="i" [bmxClientPageDesignMode]="bmxClientPageDesignMode"
+                            (autoSave)="autoSave()" [bmxClientPageOverview]="bmxClientPageOverview"></app-narrow-down> -->
                     </div>
                     <!-- END NARROW DOWN SCALE 😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭 -->
 
@@ -179,18 +179,18 @@
                         </div>
                         <!-- modal end -->
 
-                        <app-image-rate-scale [bmxItem]="bmxItem" [i]="i"
+                        <!-- <app-image-rate-scale [bmxItem]="bmxItem" [i]="i"
                             [bmxClientPageDesignMode]="bmxClientPageDesignMode"
                             [bmxClientPageOverview]="bmxClientPageOverview" (launchPathModal)="setPath($event)"
-                            (autoSave)="autoSave()"></app-image-rate-scale>
+                            (autoSave)="autoSave()"></app-image-rate-scale> -->
                     </div>
                     <!-- END IMAGE SCALE 👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀 -->
 
                     <!-- QUESTION AND ANSWER  ✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️-->
                     <div *ngIf="bmxItem.componentType === 'question-answer'" class="paragraph">
-                        <app-question-answer [bmxItem]="bmxItem" [i]="i"
+                        <!-- <app-question-answer [bmxItem]="bmxItem" [i]="i"
                             [bmxClientPageDesignMode]="bmxClientPageDesignMode" (autoSave)="autoSave()"
-                            [bmxClientPageOverview]="bmxClientPageOverview"></app-question-answer>
+                            [bmxClientPageOverview]="bmxClientPageOverview"></app-question-answer> -->
                     </div>
                     <!-- END QUESTION AND ANSWER  ✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️✒️ -->
 
@@ -221,9 +221,9 @@
                                 <mat-icon style="font-size: 17px;">cancel</mat-icon>
                             </button>
                         </div>
-                        <app-tinder [bmxItem]="bmxItem" [i]="i" [bmxClientPageDesignMode]="bmxClientPageDesignMode"
+                        <!-- <app-tinder [bmxItem]="bmxItem" [i]="i" [bmxClientPageDesignMode]="bmxClientPageDesignMode"
                             (launchPathModal)="setPath($event)" [survey]="true"
-                            [bmxClientPageOverview]="bmxClientPageOverview" (autoSave)="autoSave()"></app-tinder>
+                            [bmxClientPageOverview]="bmxClientPageOverview" (autoSave)="autoSave()"></app-tinder> -->
                     </div>
                     <!-- END TINDER  🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥 -->
 
