--- a/src/app/bmx/components/participants-email/participants-email.component.html
+++ b/src/app/bmx/components/participants-email/participants-email.component.html
@@ -108,10 +108,10 @@
                 <!-- CKEDITOR -->
                 <div>
                     <!-- <div style="margin: 30px;" [innerHTML]="brandMatrixObjects[1].componentText | safe: 'html'"></div> -->
-                    <ckeditor id="txtTexto" style="animation: fadeIn 0.5s ease forwards;"
+                    <!-- <ckeditor id="txtTexto" style="animation: fadeIn 0.5s ease forwards;"
                         [ngModelOptions]="{standalone: true}" [(ngModel)]="brandMatrixObjects[1].componentText"
                         [data]="brandMatrixObjects[1].componentText" [config]="ckconfig">
-                    </ckeditor>
+                    </ckeditor> -->
                     <div style="display: flex;justify-content: flex-end;">
                         <button mat-raised-button style="background-color: #003180;color:white;margin:20px"
                             (click)="sendEmail()">
