--- a/src/app/bmx/components/project-reports/project-reports.component.html
+++ b/src/app/bmx/components/project-reports/project-reports.component.html
@@ -53,8 +53,8 @@
       <hr>
       <div style="display:flex;flex-direction: column;justify-content: center;align-items: center; width: 100%;">
         <h3><span style="font-weight: bold; width: 100%;">SELECT RESPONDENTS</span></h3>
-        <app-docx-survey style="width: 100%;" [reportSettings]="reportSettings"
-          [isMenuActive5]="true" (dialog)="showDialog()"></app-docx-survey>
+        <!-- <app-docx-survey style="width: 100%;" [reportSettings]="reportSettings"
+          [isMenuActive5]="true" (dialog)="showDialog()"></app-docx-survey> -->
       </div>
     </mat-card-content>
   </mat-card>
