--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/text-paragraph/text-paragraph.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/text-paragraph/text-paragraph.component.html
@@ -11,12 +11,12 @@
 <div class="paragram-desktop" *ngIf="currentPage == 1 && template== 'tinder' ; else regularTemplate" style="margin: 30px;font-size: 20px;" [innerHTML]="bmxItem.componentText | safe: 'html'"></div>
 <ng-template #regularTemplate><div class="paragram-mobile" style="margin: 30px;font-size: 20px;" [innerHTML]="bmxItem.componentText | safe: 'html'"></div></ng-template>
 
-<div cdkDrag>
+<!-- <div cdkDrag>
     <ckeditor *ngIf="openSettings && bmxClientPageOverview" id="txtTexto" class="ckeditorcev"
         style="animation: fadeIn 0.5s ease forwards;" [ngModelOptions]="{standalone: true}"
         [(ngModel)]="bmxItem.componentText" [data]="bmxItem.componentText" [config]="ckconfig">
     </ckeditor>    
-</div>
+</div> -->
 
 
 <!-- <div style="display: flex;justify-content: space-around; align-items: center;width: 90vw;">
