--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/question-answer/question-answer.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/question-answer/question-answer.component.html
@@ -190,8 +190,7 @@
 
                     <div style="margin-top: 0.5rem;">
                         <mat-radio-group aria-label="Select an option"
-                            [(ngModel)]="this.bmxItem.componentSettings[0].rankType"
-                           >
+                            [(ngModel)]="this.bmxItem.componentSettings[0].rankType">
                             <div style="display: flex;flex-direction: column;gap: 1px;">
                                 <mat-radio-button value="dropDown">Drop-Down</mat-radio-button>
                                 <mat-radio-button value="radio">Radio Buttons</mat-radio-button>
@@ -346,12 +345,10 @@
                                 style="display: flex;flex-direction: row;gap:10px; justify-content: space-between;  ">
                                 <label for="">{{checkBoxName}}</label>
                                 <!-- <input type="checkbox" [checked]="allComplete" -->
-                                <input type="radio"
-                                    [checked]="testName['RATE']==checkBoxName"
+                                <input type="radio" [checked]="testName['RATE']==checkBoxName"
                                     (change)="saveChoice(checkBoxName, y,  $event)">
                             </div>
                         </div>
-                        <!-- IF ELSE TEMPLATE INPUTS  -->
                         <div
                             *ngIf="y !== 0  &&  columnName.includes('options') == true && this.bmxItem.componentSettings[0].rankType == 'checkbox'">
                             <div *ngFor="let checkBoxName of testName[columnName].split(','); let m = index"
@@ -359,10 +356,11 @@
                                 <label for="">{{checkBoxName}}</label>
                                 <!-- <input type="checkbox" [checked]="allComplete" -->
                                 <input type="checkbox"
-                                    [checked]="(testName['RATE'] && testName['RATE'].includes(checkBoxName))?true:allComplete"
+                                    [checked]="(testName['multipleChoice'] && testName['multipleChoice'].includes(checkBoxName))?true:allComplete"
                                     (change)="saveMultipleChoice(checkBoxName, y,  $event)">
                             </div>
                         </div>
+
 
                         <div
                             *ngIf="y !== 0  &&  columnName.includes('options') == true && this.bmxItem.componentSettings[0].rankType == 'dropDown'">
